[gd_scene load_steps=5 format=3 uid="uid://b55lcc4ubjyce"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_eccpg"]
[ext_resource type="Texture2D" uid="uid://kun25ew8op75" path="res://assets/images/newTitle.png" id="2_58q6d"]
[ext_resource type="PackedScene" uid="uid://8yy25gv2xxsf" path="res://scenes/options_menu_button.tscn" id="4_pdwv5"]
[ext_resource type="AudioStream" uid="uid://biahidwgnemv1" path="res://assets/sfx/Selection.wav" id="5_kxtc7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eccpg")

[node name="BlackBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1939.0
offset_bottom = 1097.0
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(960, 540)
texture = ExtResource("2_58q6d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 843.0
offset_top = 482.0
offset_right = 1074.0
offset_bottom = 800.0
theme_override_constants/separation = 64

[node name="CreateCharacter" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
focus_mode = 0
text = "CREATE CHARACTER"

[node name="ChooseAdventure" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
focus_mode = 0
text = "CHOOSE ADVENTURE"

[node name="Return" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
focus_mode = 0
text = "RETURN"

[node name="Accept" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kxtc7")

[node name="OptionsMenuButton" parent="." instance=ExtResource("4_pdwv5")]
layout_mode = 0
offset_left = 1852.0
offset_top = 7.0
offset_right = 1972.0
offset_bottom = 127.0

[connection signal="pressed" from="VBoxContainer/CreateCharacter" to="." method="_on_create_character_pressed"]
[connection signal="pressed" from="VBoxContainer/ChooseAdventure" to="." method="_on_choose_adventure_pressed"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
